--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
           <!-- Modal simple para imágenes -->
           <div
             id="simpleImageModal"
-            class="fixed inset-0 z-50 hidden bg-black bg-opacity-90 transition-opacity duration-300"
+            class="fixed inset-0 z-[9999] hidden bg-black bg-opacity-90 transition-opacity duration-300"
           >
             <div
               class="relative w-full h-full flex items-center justify-center p-4"
